--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "ng-keyboard-shortcuts": "^8.0.0",
+    "ngx-barcode": "^0.3.0",
     "ngx-bootstrap": "^5.1.0",
     "ngx-print": "^1.2.0-beta.2",
     "ngx-toastr": "^10.1.0",
