--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "angular-highcharts": "^8.0.3",
     "bootstrap": "4.1.1",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.5",
     "highcharts": "^7.1.3",
     "highcharts-angular": "^2.4.0",
     "jquery": "^3.4.1",
@@ -53,6 +54,7 @@
     "sweetalert2": "^8.13.4",
     "tslib": "^1.9.0",
     "typescript-formatter": "^7.2.2",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
