--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "highcharts": "^7.1.3",
     "highcharts-angular": "^2.4.0",
     "jquery": "^3.4.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "moment": "^2.24.0",
     "ng-keyboard-shortcuts": "^8.0.0",
     "ngx-barcode": "^0.3.0",
