--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/router": "~7.2.0",
     "@angular/service-worker": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.2.1",
+    "@ng-select/ng-select": "^2.20.5",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@sweetalert2/ngx-sweetalert2": "^5.1.0",
