--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 # dependencies
 node_modules/*
 !node_modules/ng-keyboard-shortcuts
+node_modules/ng-keyboard-shortcuts/node_modules/
 /release-builds
 
 # profiling files
