--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@sweetalert2/ngx-sweetalert2": "^5.1.0",
+    "@tinymce/tinymce-angular": "^3.0.1",
     "angular-highcharts": "^8.0.3",
     "bootstrap": "4.1.1",
+    "ckeditor4-angular": "^1.1.0",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.5",
     "highcharts": "^7.1.3",
@@ -57,6 +59,7 @@
     "rxjs-compat": "6.3.3",
     "select2": "^4.0.7",
     "sweetalert2": "^8.13.4",
+    "tinymce": "^8.3.2",
     "tslib": "^1.9.0",
     "typescript-formatter": "^7.2.2",
     "xlsx": "^0.18.5",
